package domain.catalogo;

public class Album {
}
