package domain.catalogo;

public class Artista {
}
